Added blog page

--- a/docs/assets/scss/style.css
+++ b/docs/assets/scss/style.css
@@ -1170,133 +1170,189 @@ main #skills .larguraMaxContainer > div #texto-skills p {
   color: #f9f9f9;
 }
 
-/*
-#contato {
-  background-color: $corBrancaDark;
-  padding: 70px;
+#blogPosts{
+  height: 90vh;
+  background-color: #181818;
+}
+main #blogPosts {
+  padding: 100px 50px;
+  text-align: center;
+  background-color: #181818;
+}
+
+@media screen and (max-width: 1024px) {
+  main #blogPosts {
+    padding: 50px 20px;
+  }
+}
+
+main #blogPosts .larguraMaxContainer h2 {
+  padding-bottom: 20px;
+  color: #fefbfb;
+  font-size: 32px;
+  font-weight: 500;
+}
+
+main #blogPosts .larguraMaxContainer article {
+  margin: 25px 0px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  fieldset{
-    border: none;
-  }
-  #agradecimento{
-    width: 30%;
-    height: 300px;
-    background-color: $corPrincipal;
-    border-top-left-radius: 10px;
-    border-bottom-left-radius: 10px;
-    text-align: center;
-    position: relative;
-    div{
-      width: 80%;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-    }
-    h2{
-      color: $corBranca;
-    }
-    h4{
-      color: $corBranca;
-    }
-  }
-  #camposContato{
-    background-color: $corBranca;
-    width: 60%;
-    height: auto;
-    border-radius: 10px;
-    padding: 30px;
-    #campoFlex{
-      display: flex;
-      justify-content: space-between;
-    }
-    .campoPadrao{
-      width: 47%;
-    }
-    input{
-      border: none;
-      padding-left: 15px;
-      margin-top: 10px;
-      font-size: 14px;
-    }
-    textarea{
-      border: none;
-      background-color: #f0f0f0;
-      padding: 10px 15px;
-      margin-top: 10px;
-      font-size: 14px;
-    }
-    .campos{
-      width: 100%;
-      height: 40px;
-      border-radius: 5px;
-       background-color: #f0f0f0;
-    }
-    #captcha{
-      font-size: 20px;
-      float: right;
-      #campo {
-        width: 40px;
-        height: 30px;
-        background-color:#ddd;
-        padding-left: 15px;
-        border-radius: 5px;
-      }
-    }
-  }
-  #campoDois{
-    margin-top: 20px;
-    #campoMensagem{
-      width: 100%;
-      height: 150px;
-      border-radius: 5px;
-    }
-  }
-  #botao{
-    margin-top: 20px;
-    background-color: $corPrincipal;
-    color: $corBranca;
-    border: none;
-    padding: 10px 15px;
-    border-radius: 5px;
-    cursor: pointer;
-    font: {
-      size:18px;
-      weight: 700;
-    }
-    &:hover{
-      background-color: $hoverPrincipal;
-    }
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  text-align: left;
+}
+
+main #blogPosts .larguraMaxContainer article > div {
+  height: auto;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  -ms-flex-preferred-size: calc(33% - 20px);
+      flex-basis: calc(33% - 20px);
+  background-color: #202020;
+  padding: 30px 25px;
+  margin: 10px;
+  border-radius: 5px;
+  position: relative;
+  -webkit-transition: 0.8s all ease;
+  transition: 0.8s all ease;
+  border: 3px solid #202020;
+}
+
+main #blogPosts .larguraMaxContainer article > div:hover {
+  border: 3px solid #ffa6a6;
+}
+
+@media screen and (max-width: 1124px) {
+  main #blogPosts .larguraMaxContainer article > div {
+    -ms-flex-preferred-size: calc(50% - 20px);
+        flex-basis: calc(50% - 20px);
   }
 }
-@media screen and (max-width:1100px){
-  #contato{
-    padding: 70px 20px;
-    #agradecimento{
-      display: none;
-    }
-    #camposContato{
-      width: 100%;
-    }
+
+@media screen and (max-width: 768px) {
+  main #blogPosts .larguraMaxContainer article > div {
+    -ms-flex-preferred-size: calc(100% - 20px);
+        flex-basis: calc(100% - 20px);
   }
 }
-@media screen and (max-width:650px){
-  #contato{
-    #camposContato{
-       #campoFlex{
-        flex-wrap: wrap;
-        #espacoResponsivo{
-          margin-top: 20px;
-        }
-      }
-      .campoPadrao{
-        width: 100%;
-      }
-    }
+
+main #blogPosts .larguraMaxContainer article > div img {
+  margin: 20px 0;
+  border-radius: 5px;
+}
+
+main #blogPosts .larguraMaxContainer article > div h3 {
+  font-size: 1.2rem;
+  color: #fefbfb;
+}
+
+main #blogPosts .larguraMaxContainer article > div p {
+  line-height: 28px;
+  margin-bottom: 20px;
+  font-size: 1rem;
+  color: #f9f9f9;
+}
+
+main #blogPosts .larguraMaxContainer article > div > span {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  width: 100%;
+}
+
+main #blogPosts .larguraMaxContainer article > div > span a {
+  width: 50%;
+}
+
+@media screen and (max-width: 1024px) {
+  main #blogPosts .larguraMaxContainer article > div > span a {
+    width: 100%;
   }
-}*/
+}
+
+main #blogPosts .larguraMaxContainer article > div > span button {
+  background-color: #6610f2;
+  padding: 10px 25px;
+  color: #fefbfb;
+  border: 0;
+  font-weight: 500;
+  font-size: 14px;
+  border-radius: 5px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 10px;
+}
+
+@media screen and (max-width: 1024px) {
+  main #blogPosts .larguraMaxContainer article > div > span button {
+    width: 100%;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+
+main #blogPosts .larguraMaxContainer article > div > span button:hover {
+  cursor: pointer;
+  background-color: #5429cf;
+}
+
+main #blogPosts .larguraMaxContainer article > div > span button .iconify {
+  font-size: 70px;
+}
+#downloadButton{
+  height: 40px;
+  width: 40px;
+  padding-right: 20px;
+}
+
+main #blogPosts .larguraMaxContainer article > div .linguagensProjeto {
+  margin-top: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  width: 100%;
+  height: auto;
+}
+
+main #blogPosts .larguraMaxContainer article > div .linguagensProjeto span {
+  padding: 5px;
+  background-color: #181818;
+  border-radius: 5px;
+  color: #fefbfb;
+  margin-bottom: 5px;
+}
+
+main #blogPosts .larguraMaxContainer a {
+  color: #ffa6a6;
+  font-size: 18px;
+}
+
 .scrollTop {
   position: fixed;
   right: 20px;
