Dark mode styles updated

--- a/docs/assets/scss/darkmode.css
+++ b/docs/assets/scss/darkmode.css
@@ -1,24 +1,64 @@
+:root{
+  --dark: #202020;
+  --dark2: #181818;
+  --light: #ebecf0;
+  --light2: white;
 
+}
   .dark-mode header {
-    background-color: #202020;
+    background-color: var(--dark);
   }
   
   .dark-mode header .larguraMaxContainer nav .logo, .dark-mode
   header .larguraMaxContainer nav .nav-list li a {
-    color: #ebecf0;
+    color: var(--light)
   }
   
   .dark-mode header .larguraMaxContainer nav .nav-list li a:hover {
-    color: #ebecf0;
+    color: var(--light)
   }
   
   .dark-mode main #apresentacaoPortfolio {
-    background-color: #181818;
+    background-color: var(--dark2)
   }
   
   .dark-mode  main #apresentacaoPortfolio .larguraMaxContainer #apresentacaoTexto h2,
   #mouse {
     color: white;
-    stroke: #ebecf0;
+    stroke: var(--light)
   }
-  
+  .dark-mode .mobile-menu div {
+    background-color: var(--light2)
+  }
+  .dark-mode .nav-list{
+    background-color: var(--dark)
+  }
+  .dark-mode main #about{
+    background-color: var(--dark);
+  }
+.dark-mode main #about .larguraMaxContainer #aboutTexto h2  {
+color: var(--light);}
+.dark-mode main #about .larguraMaxContainer #aboutTexto p  {
+color: var(--light);}
+.dark-mode main #projects {
+background-color: var(--dark2);}
+.dark-mode main #projects .larguraMaxContainer h2 {
+color: var(--light2);}
+.dark-mode main #projects .larguraMaxContainer article > div {
+background-color: var(--dark);}
+.dark-mode main #projects .larguraMaxContainer article > div h3 {
+color: var(--light2);}
+.dark-mode main #projects .larguraMaxContainer article > div p {
+color: var(--light);}
+.dark-mode main #projects .larguraMaxContainer article > div {
+border-color: var(--dark);}
+.dark-mode main #projects .larguraMaxContainer article > div:hover {
+border-color: #ffa6a6;}
+.dark-mode main #projects .larguraMaxContainer a {
+color: #ffa6a6;}
+.dark-mode main #about .larguraMaxContainer #aboutFoto #figura1 {
+background-color: var(--dark2);}
+.dark-mode main #about .larguraMaxContainer #aboutFoto #figura2 {
+  background-color: var(--dark2);}
+  .dark-mode main #about .larguraMaxContainer #aboutFoto #figura3 {
+    background-color: var(--dark2);}
