--- a/docs/assets/scss/darkmode.css
+++ b/docs/assets/scss/darkmode.css
@@ -62,3 +62,28 @@ background-color: var(--dark2);}
   background-color: var(--dark2);}
   .dark-mode main #about .larguraMaxContainer #aboutFoto #figura3 {
     background-color: var(--dark2);}
+    .dark-mode main #services {
+background-color: var(--dark);}
+.dark-mode main #services .larguraMaxContainer h2 {
+color: var(--light2);}
+.dark-mode main #services .larguraMaxContainer article div {
+  border: 3px solid var(--dark);
+background-color: var(--dark2);}
+.dark-mode main #services .larguraMaxContainer article div h3 {
+color: var(--light2)};
+.dark-mode main #services .larguraMaxContainer article div p{
+color: var(--light2);}
+.dark-mode main #services .larguraMaxContainer article div p{
+  color: var(--light2);
+}
+.dark-mode main #skills {
+background-color: var(--dark2);}
+.dark-mode main #skills .larguraMaxContainer > div #texto-skills h2{
+  color: var(--light2);
+}
+.dark-mode main #skills .larguraMaxContainer > div #texto-skills p{
+  color: var(--light2);
+}
+.dark-mode main #skills .larguraMaxContainer > div #cards-skills div {
+background-color: var(--dark)};
+
